Fix index grid on contrast backgrounds

--- a/src/nationalarchives/components/index-grid/index-grid.scss
+++ b/src/nationalarchives/components/index-grid/index-grid.scss
@@ -35,6 +35,10 @@
 
     text-decoration: none;
 
+    .tna-background-contrast & {
+      @include colour.plain;
+    }
+
     @include colour.on-high-contrast-and-forced-colours {
       @include colour.colour-border("keyline-dark", 1px);
     }
